# Inception

./: .gitignore  DEV_DOC.md  Makefile  README.md  USER_DOC.md  notes  out.txt  tini.md
scripts/: auto_generate_env.sh  check_inception.sh  check_sudo.sh  crash_test.sh  edit_hosts.sh  fclean.sh  ftp.sh  ftp_download.sh  ftp_upload.sh  generate_env.sh  generate_secrets.sh  kill_containers.sh  privilege_check.sh  redis_test.sh  uninstall.sh  volumes_check.sh
scripts/lib/: config.sh  format.sh
srcs/: .env_example  check_inception.sh  check_inception_imp.sh  colume_check_imp.sh  crash_test.sh  crash_test_imp.sh  docker-compose.yml  generate_secrets.sh  out.txt  volumes_check.sh
srcs/requirements/bonus/adminer/: Dockerfile
srcs/requirements/bonus/chessgame/: Dockerfile  entrypoint.sh
srcs/requirements/bonus/chessgame/conf/: Cargo.toml  index.html
srcs/requirements/bonus/hugo/: Dockerfile
srcs/requirements/bonus/llm-gen/: .dockerignore  Dockerfile
srcs/requirements/bonus/redis/: Dockerfile
srcs/requirements/bonus/vsftpd/: Dockerfile
srcs/requirements/mariadb/: Dockerfile
srcs/requirements/mariadb/tools/: healthcheck.sh  init.sh
srcs/requirements/nginx/: Dockerfile
srcs/requirements/nginx/conf/: 404.html  nginx.conf
srcs/requirements/nginx/tools/: claudeindex.html  conf  index.html  index_deepseek2.html  indexgpt2.html  init.sh
srcs/requirements/wordpress/: Dockerfile
srcs/requirements/wordpress/conf/: wp-config.php
srcs/scripts/: check_inception.sh  check_sudo.sh  ftp.sh  generate_secrets.sh
srcs/scripts/lib/: config.sh
(+17 files in other folders)
