[package]
name = "chess_game"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
console_log = "1.0.0"
eframe = "0.32.2"
egui = "0.32.2"
log = "0.4.28"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "HtmlAnchorElement",
  "Blob", "Url", "Node"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
